explorations for colab

--- a/scripts/5_lemmata-extraction.ipynb
+++ b/scripts/5_lemmata-extraction.ipynb
@@ -1787,8 +1787,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T23:05:52.669701Z",
-     "start_time": "2024-02-07T23:05:52.666411Z"
+     "end_time": "2024-02-08T07:13:50.675201Z",
+     "start_time": "2024-02-08T07:13:50.638861Z"
     }
    },
    "cell_type": "code",
@@ -1801,15 +1801,15 @@
     {
      "data": {
       "text/plain": [
-       "260"
+       "533"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 51
   },
   {
    "cell_type": "code",
@@ -1823,16 +1823,29 @@
    ],
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-02-07T23:05:56.117592Z"
+     "end_time": "2024-02-08T07:49:57.720349Z",
+     "start_time": "2024-02-08T07:14:05.402253Z"
     }
    },
    "id": "a55a2198dda079ef",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[52], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m fn \u001B[38;5;129;01min\u001B[39;00m jsonfiles_list:\n\u001B[1;32m      2\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m fn \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m f_sents_ready:\n\u001B[0;32m----> 3\u001B[0m         doc \u001B[38;5;241m=\u001B[39m \u001B[43mfilename_to_doc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfn\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      4\u001B[0m         f_sents \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../data/large_data/sents_text/\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m fn\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m.json\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m), \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mw\u001B[39m\u001B[38;5;124m\"\u001B[39m, encoding\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mutf-8\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      5\u001B[0m         doc_sents \u001B[38;5;241m=\u001B[39m [sent\u001B[38;5;241m.\u001B[39mtext \u001B[38;5;28;01mfor\u001B[39;00m sent \u001B[38;5;129;01min\u001B[39;00m doc\u001B[38;5;241m.\u001B[39msents]\n",
+      "Cell \u001B[0;32mIn[7], line 3\u001B[0m, in \u001B[0;36mfilename_to_doc\u001B[0;34m(filename, dir)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mfilename_to_doc\u001B[39m(filename, \u001B[38;5;28mdir\u001B[39m\u001B[38;5;241m=\u001B[39mtarget_folder_name):\n\u001B[1;32m      2\u001B[0m     doc_json \u001B[38;5;241m=\u001B[39m s\u001B[38;5;241m.\u001B[39mread_file(\u001B[38;5;28mdir\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m/\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m filename, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdict\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     doc \u001B[38;5;241m=\u001B[39m \u001B[43mDoc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnlp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvocab\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfrom_json\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc_json\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m doc\n",
+      "File \u001B[0;32m/opt/homebrew/lib/python3.10/site-packages/spacy/tokens/doc.pyx:1555\u001B[0m, in \u001B[0;36mspacy.tokens.doc.Doc.from_json\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/opt/homebrew/lib/python3.10/site-packages/spacy/util.py:1456\u001B[0m, in \u001B[0;36mget_words_and_spaces\u001B[0;34m(words, text)\u001B[0m\n\u001B[1;32m   1454\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m word \u001B[38;5;129;01min\u001B[39;00m norm_words:\n\u001B[1;32m   1455\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1456\u001B[0m         word_start \u001B[38;5;241m=\u001B[39m \u001B[43mtext\u001B[49m\u001B[43m[\u001B[49m\u001B[43mtext_pos\u001B[49m\u001B[43m:\u001B[49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\u001B[43m(\u001B[49m\u001B[43mword\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m:\n\u001B[1;32m   1458\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(Errors\u001B[38;5;241m.\u001B[39mE194\u001B[38;5;241m.\u001B[39mformat(text\u001B[38;5;241m=\u001B[39mtext, words\u001B[38;5;241m=\u001B[39mwords)) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "execution_count": 52
   },
   {
    "cell_type": "code",
