--- a/scripts/8_fasttext-training.ipynb
+++ b/scripts/8_fasttext-training.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from gensim.models.fasttext import FastText\n",
@@ -16,15 +14,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-11T10:58:39.833675Z",
-     "start_time": "2023-12-11T10:58:39.310403Z"
+     "end_time": "2024-02-08T14:09:24.466571Z",
+     "start_time": "2024-02-08T14:09:24.208583Z"
     }
    },
-   "id": "b0c3f2cfd2ca6805"
+   "id": "b0c3f2cfd2ca6805",
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "source": [
+    "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-08T14:55:20.264093Z",
+     "start_time": "2024-02-08T14:55:08.669189Z"
+    }
+   },
+   "id": "e733e4abbe83f6aa",
    "outputs": [
     {
      "name": "stdout",
@@ -35,17 +45,7 @@
      ]
     }
    ],
-   "source": [
-    "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-11T10:58:50.829297Z",
-     "start_time": "2023-12-11T10:58:41.078584Z"
-    }
-   },
-   "id": "e733e4abbe83f6aa"
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -435,14 +435,61 @@
    "id": "e123fed450a9a7f5"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2024-02-08T14:57:55.129404Z",
+     "start_time": "2024-02-08T14:57:01.470490Z"
+    }
    },
-   "id": "9cc9d51280cb9cad"
+   "cell_type": "code",
+   "source": "shutil.make_archive(\"../data/large_data/lila_vectors\", 'zip', \"../data/large_data/lila_vectors\") #",
+   "id": "5ab4cb0ada47811b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/vojtechkase/Projects/noscemus_ETF/data/large_data/lila_vectors.zip'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "source": "s.s.put(\"https://sciencedata.dk/sharingout/kase%40zcu.cz/TOME/DATA/NOSCEMUS/lila_vectors.zip\", data=open(\"../data/large_data/lila_vectors.zip\", \"rb\"))",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-08T14:59:37.286699Z",
+     "start_time": "2024-02-08T14:59:03.497861Z"
+    }
+   },
+   "id": "9cc9d51280cb9cad",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [204]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "4a18afb4d931ed98"
   }
  ],
  "metadata": {
