--- a/scripts/10_from-vocab-to-text.ipynb
+++ b/scripts/10_from-vocab-to-text.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-08T00:12:20.732389Z",
-     "start_time": "2024-02-08T00:12:20.728848Z"
+     "end_time": "2024-05-02T07:57:36.580661Z",
+     "start_time": "2024-05-02T07:57:29.951507Z"
     }
    },
    "source": [
@@ -33,26 +33,26 @@
     "from google.oauth2 import service_account # based on google-auth library"
    ],
    "outputs": [],
-   "execution_count": 155
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:08:17.717722Z",
-     "start_time": "2024-02-07T22:08:16.818122Z"
+     "end_time": "2024-05-02T07:57:44.142745Z",
+     "start_time": "2024-05-02T07:57:43.054504Z"
     }
    },
    "cell_type": "code",
    "source": "nlp = spacy.load('la_core_web_lg')",
    "id": "7cf723e5f563c83e",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:16:30.226802Z",
-     "start_time": "2024-02-07T22:16:30.199781Z"
+     "end_time": "2024-05-02T10:46:09.579488Z",
+     "start_time": "2024-05-02T10:46:09.517384Z"
     }
    },
    "cell_type": "code",
@@ -292,18 +292,72 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:17:25.313233Z",
-     "start_time": "2024-02-07T22:17:25.299287Z"
+     "end_time": "2024-05-02T18:31:08.634911Z",
+     "start_time": "2024-05-02T18:31:08.624027Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "f_sents_ready = os.listdir(\"../data/large_data/sents_text\")\n",
+    "len(f_sents_ready)"
+   ],
+   "id": "5eddad7a2e03b4ee",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1006"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 108
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T20:01:38.638675Z",
+     "start_time": "2024-05-02T20:01:38.629334Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "f_positions_ready = os.listdir(\"../data/large_data/sents_positions\")\n",
+    "len(f_positions_ready)"
+   ],
+   "id": "503a065dcbb38098",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1007"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 123
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T10:47:50.666338Z",
+     "start_time": "2024-05-02T10:47:50.657096Z"
     }
    },
    "cell_type": "code",
@@ -328,18 +382,18 @@
        " 598104]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:08:18.103892Z",
-     "start_time": "2024-02-07T22:08:18.073552Z"
+     "end_time": "2024-05-02T10:47:55.579893Z",
+     "start_time": "2024-05-02T10:47:55.545231Z"
     }
    },
    "cell_type": "code",
@@ -715,31 +769,111 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:19:44.224522Z",
-     "start_time": "2024-02-07T22:19:44.221368Z"
+     "end_time": "2024-05-02T10:47:58.906219Z",
+     "start_time": "2024-05-02T10:47:58.903648Z"
     }
    },
    "cell_type": "code",
    "source": "vocab_list = filtered_vocab_df[\"word\"].tolist()",
    "id": "3788bc184e946f6d",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:08:32.285996Z",
-     "start_time": "2024-02-07T22:08:32.282887Z"
+     "end_time": "2024-05-02T10:47:59.190935Z",
+     "start_time": "2024-05-02T10:47:59.183866Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "filtered_vocab_df[filtered_vocab_df[\"word\"]==\"liber\"]",
+   "id": "b995534789466d35",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       word  1501-1550  1551-1600  1601-1650  1651-1700     mean  \\\n",
+       "4628  liber      22941      36345      17863      26167  25829.0   \n",
+       "\n",
+       "      in_lila_embeddings  in_lasla  in_operamaiora  \\\n",
+       "4628                True      True            True   \n",
+       "\n",
+       "                                              transl  \n",
+       "4628  book, volume, inner bark of a tree, book, book  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>1501-1550</th>\n",
+       "      <th>1551-1600</th>\n",
+       "      <th>1601-1650</th>\n",
+       "      <th>1651-1700</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>in_lila_embeddings</th>\n",
+       "      <th>in_lasla</th>\n",
+       "      <th>in_operamaiora</th>\n",
+       "      <th>transl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4628</th>\n",
+       "      <td>liber</td>\n",
+       "      <td>22941</td>\n",
+       "      <td>36345</td>\n",
+       "      <td>17863</td>\n",
+       "      <td>26167</td>\n",
+       "      <td>25829.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>book, volume, inner bark of a tree, book, book</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T10:48:00.406919Z",
+     "start_time": "2024-05-02T10:48:00.403708Z"
     }
    },
    "cell_type": "code",
@@ -752,18 +886,18 @@
        "6332"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:09:59.915969Z",
-     "start_time": "2024-02-07T22:09:51.197087Z"
+     "end_time": "2024-05-02T10:46:29.022730Z",
+     "start_time": "2024-05-02T10:46:18.870253Z"
     }
    },
    "cell_type": "code",
@@ -779,13 +913,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:10:04.902728Z",
-     "start_time": "2024-02-07T22:10:03.912422Z"
+     "end_time": "2024-05-02T10:48:07.019835Z",
+     "start_time": "2024-05-02T10:48:05.396127Z"
     }
    },
    "cell_type": "code",
@@ -811,18 +945,18 @@
        " '1424044.json']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:10:07.163965Z",
-     "start_time": "2024-02-07T22:10:07.159556Z"
+     "end_time": "2024-05-02T10:48:07.024629Z",
+     "start_time": "2024-05-02T10:48:07.021357Z"
     }
    },
    "cell_type": "code",
@@ -835,18 +969,18 @@
        "1007"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:22:21.165851Z",
-     "start_time": "2024-02-07T22:22:21.162773Z"
+     "end_time": "2024-05-02T10:48:27.830321Z",
+     "start_time": "2024-05-02T10:48:27.827432Z"
     }
    },
    "cell_type": "code",
@@ -858,13 +992,13 @@
    ],
    "id": "c8bc5884104904d1",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:22:26.655246Z",
-     "start_time": "2024-02-07T22:22:22.236962Z"
+     "end_time": "2024-05-02T10:48:33.246749Z",
+     "start_time": "2024-05-02T10:48:28.087485Z"
     }
    },
    "cell_type": "code",
@@ -874,13 +1008,13 @@
    ],
    "id": "cb0447150d1bc95a",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:23:10.460656Z",
-     "start_time": "2024-02-07T22:23:10.450803Z"
+     "end_time": "2024-05-02T10:48:33.258005Z",
+     "start_time": "2024-05-02T10:48:33.247864Z"
     }
    },
    "cell_type": "code",
@@ -896,18 +1030,18 @@
        "Quâ in re si quid profecerimus, non alia sanè ratio nobis viam aperuit, quàm vera & legitima spiritus humant humiliatio."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T23:30:26.106803Z",
-     "start_time": "2024-02-07T23:30:26.095941Z"
+     "end_time": "2024-05-02T10:48:33.263426Z",
+     "start_time": "2024-05-02T10:48:33.259297Z"
     }
    },
    "cell_type": "code",
@@ -928,51 +1062,31 @@
        " ('spiritus', 'spiritus')]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 101
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T22:25:59.663957Z",
-     "start_time": "2024-02-07T22:25:59.640323Z"
+     "end_time": "2024-05-02T10:48:33.266880Z",
+     "start_time": "2024-05-02T10:48:33.264961Z"
     }
    },
    "cell_type": "code",
-   "source": "t.id",
-   "id": "1ad14d37e3eac5dc",
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 't' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[23], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mt\u001B[49m\u001B[38;5;241m.\u001B[39mid\n",
-      "\u001B[0;31mNameError\u001B[0m: name 't' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 23
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "vocab_instances = {}",
-   "id": "5470feb4e04e7c0c"
+   "id": "5470feb4e04e7c0c",
+   "outputs": [],
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T23:47:58.418680Z",
-     "start_time": "2024-02-07T23:47:58.415589Z"
+     "end_time": "2024-05-02T10:49:15.018244Z",
+     "start_time": "2024-05-02T10:49:15.014357Z"
     }
    },
    "cell_type": "code",
@@ -987,7 +1101,7 @@
    ],
    "id": "ecbace267ad2c715",
    "outputs": [],
-   "execution_count": 137
+   "execution_count": 37
   },
   {
    "metadata": {
