--- a/scripts/1_reorganize-noscemus-directories.ipynb
+++ b/scripts/1_reorganize-noscemus-directories.ipynb
@@ -17,8 +17,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sddk"
@@ -26,11 +24,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-19T08:58:19.173566Z",
-     "start_time": "2023-12-19T08:58:18.580900Z"
+     "end_time": "2024-07-26T10:34:17.016167Z",
+     "start_time": "2024-07-26T10:34:17.012958Z"
     }
    },
-   "id": "b77bbb44a71d1ae8"
+   "id": "b77bbb44a71d1ae8",
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -47,6 +47,7 @@
    ],
    "source": [
     "# we keep the data on a shared folder on sciencedata.dk\n",
+    "# to go through that step, you have to have a) a sciencedata.dk account and b) access to the TOME directory\n",
     "s = sddk.cloudSession(provider=\"sciencedata.dk\", shared_folder_name=\"TOME/DATA/NOSCEMUS\", owner=\"kase@zcu.cz\")"
    ],
    "metadata": {
@@ -163,31 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ids_filenames_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mids_filenames_df\u001B[49m\u001B[38;5;241m.\u001B[39mto_csv(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../data/ids_filenames_df.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'ids_filenames_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "ids_filenames_df.to_csv(\"../data/ids_filenames_df.csv\")"
-   ],
+   "source": "ids_filenames_df.to_csv(\"../data/ids_filenames_df.csv\")",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T09:52:08.352527Z",
-     "start_time": "2023-11-30T09:52:08.254291Z"
+     "end_time": "2024-07-26T10:36:15.931204Z",
+     "start_time": "2024-07-26T10:36:15.929038Z"
     }
    },
-   "id": "9be5ab81075bf163"
+   "id": "9be5ab81075bf163",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -252,9 +239,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "brewkernel",
+   "name": "noscemus_kernel",
    "language": "python",
-   "display_name": "brewkernel"
+   "display_name": "noscemus_kernel"
   },
   "language_info": {
    "codemirror_mode": {
